--- a/Lecture-1/index.html
+++ b/Lecture-1/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>WelcCome to React Lect-1</h1>
     <div id="root" class="root">
-     
+     <h1>Testing</h1>
     </div>
     <script src="index.js" type="text/babel"></script>
   </body>
